<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ShureDroid</string>
    <!-- TODO: popup on event --><string name="connected">Connected</string>
    <!-- TODO: popup on event --><string name="disconnected">Disconnected</string>
    <string name="phantom_power_48v">PHANTOM POWER (48 V)</string>
    <string name="mic_mute">MIC MUTE</string>
    <string name="paren_mic">(MIC)</string>
    <string name="monitor_mix">MONITOR MIX</string>
    <string name="manual_gain">MANUAL GAIN</string>
    <string name="limiter">LIMITER</string>
    <string name="compressor">COMPRESSOR</string>
    <string name="off">Off</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="heavy">Heavy</string>
    <string name="low_cut">LOW CUT</string>
    <string name="_75_hz">75 Hz</string>
    <string name="_150_hz">150 Hz</string>
    <string name="eq">EQ</string>
    <string name="_100">100</string>
    <string name="_250">250</string>
    <string name="_1000">1000</string>
    <string name="_4000">4000</string>
    <string name="_10000">10000</string>
    <string name="distance">DISTANCE</string>
    <string name="far">Far</string>
    <string name="near">Near (test tint)</string><!--TODO-->
    <string name="tone">TONE</string>
    <string name="dark">Dark</string>
    <string name="neutral">Neutral</string>
    <string name="bright">Bright</string>
    <string name="auto_gain">AUTO GAIN</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="lock">LOCK</string>
    <string name="unofficial_client">Unofficial MVX2U Client</string>
    <string name="auto_button_text">Auto</string>
    <string name="manual_button_text">Manual</string>
</resources>
